force-app/main/default/objects/History_Tracking__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>History Tracking</relationshipLabel>
        <relationshipName>History_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Status__c</fullName>
        <label>Current Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Status_Change__c</fullName>
        <description>Last status change for the connected case.

Created for case 01260331</description>
        <label>Last Status Change</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Staus__c</fullName>
        <label>Last Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>History Tracking</relationshipLabel>
        <relationshipName>History_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TimeBetweenStatusBusinessDays__c</fullName>
        <formula>ABS(

CASE(MOD (datevalue( Last_Status_Change__c)- DATE(1985,6,24),7),
0 , CASE( MOD( Datevalue( CreatedDate ) - datevalue(Last_Status_Change__c)
,7),1,2,2,3,3,4,4,5,5,5,6,5,1)
,
1 , CASE( MOD( Datevalue( CreatedDate ) - datevalue(Last_Status_Change__c)
,7),1,2,2,3,3,4,4,4,5,4,6,5,1),
2 , CASE( MOD( Datevalue( CreatedDate ) - datevalue(Last_Status_Change__c)
,7),1,2,2,3,3,3,4,3,5,4,6,5,1),
3 , CASE( MOD( Datevalue( CreatedDate ) - datevalue(Last_Status_Change__c)
,7),1,2,2,2,3,2,4,3,5,4,6,5,1),
4 , CASE( MOD( Datevalue( CreatedDate ) - datevalue(Last_Status_Change__c)
,7),1,1,2,1,3,2,4,3,5,4,6,5,1),
5 , CASE( MOD( Datevalue( CreatedDate ) - datevalue(Last_Status_Change__c)
,7),1,0,2,1,3,2,4,3,5,4,6,5,0),
6 , CASE( MOD( Datevalue( CreatedDate ) - datevalue(Last_Status_Change__c)
,7),1,1,2,2,3,3,4,4,5,5,6,5,0),
999)
+
(FLOOR((( CreatedDate ) - ( Last_Status_Change__c) )/7)*5)-1 +

( CreatedDate - Last_Status_Change__c) - (datevalue( CreatedDate ) -
datevalue(Last_Status_Change__c))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Between Status (Business Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Between_Statusssdsd__c</fullName>
        <label>Time Between Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Status Change</fullName>
                </value>
                <value>
                    <fullName>Un-Hidden</fullName>
                </value>
                <value>
                    <fullName>IPM Stage Change</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>History Tracking</label>
    <nameField>
        <displayFormat>HT-{0000}</displayFormat>
        <label>History Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>History Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>